# polyCopyCat

./: .arb-request  .gitignore  .scout-request  .smoke-request  .xarb-request  GUIDE.md  README.md  config.example.json  pyproject.toml  wc-pairs.json  xarb-pairs.example.json  xarb-pairs.json
.claude/skills/verify/: SKILL.md
.github/workflows/: arb.yml  scout.yml  smoke.yml  xarb.yml
arb-results/: latest.txt
deploy/: README.md  backup.sh  deploy.env.example  setup.sh
polycopycat/: __init__.py  _http.py  arb.py  cli.py  data_api.py  kalshi.py  models.py  stream.py  watcher.py  xarb.py
polycopycat/engine/: __init__.py  aggregate.py  clob.py  config.py  depth.py  engine.py  executor.py  ledger.py  live.py  mirror.py  notify.py  risk.py  signals.py  sizing.py
polycopycat/scout/: __init__.py  metrics.py  runner.py  score.py
polycopycat/us/: __init__.py  api.py  match.py
scout-results/: latest.json  latest.txt
smoke-results/: summary.txt
tests/: test_arb.py  test_clob.py  test_config_underscore.py  test_data_api.py  test_depth.py  test_dynamic_age_retry.py  test_engine.py  test_engine_config.py  test_engine_m3.py  test_force_exit.py  test_health.py  test_kalshi.py  test_ledger.py  test_live_executor.py  test_mirror.py  test_models.py  test_notify.py  test_paper_executor.py  test_preflight.py  test_risk.py  test_scout_metrics.py  test_scout_runner.py  test_scout_score.py  test_sizing.py  test_stream.py  test_trust_store.py  test_us_api.py  test_us_match.py  test_watcher.py  test_xarb.py
xarb-results/: latest.json  latest.txt
